--- a/Benutzerverwaltung/Benutzerverwaltung/Properties/Resources.resx
+++ b/Benutzerverwaltung/Benutzerverwaltung/Properties/Resources.resx
@@ -120,6 +120,9 @@
   <data name="Address" xml:space="preserve">
     <value>Adresse</value>
   </data>
+  <data name="AreYouSure" xml:space="preserve">
+    <value>Sind Sie sicher?</value>
+  </data>
   <data name="Birthdate" xml:space="preserve">
     <value>Geburtsdatum</value>
   </data>
