added feature to get time  to lager from js

--- a/LagerVerwaltung/LagerVerwaltung/Properties/Resources.resx
+++ b/LagerVerwaltung/LagerVerwaltung/Properties/Resources.resx
@@ -138,4 +138,7 @@
   <data name="StorageAmount" xml:space="preserve">
     <value>Lagerbestand</value>
   </data>
+  <data name="TimeNeeded" xml:space="preserve">
+    <value>Zeit zum Zentrallager</value>
+  </data>
 </root>
